git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6866 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn-dec2010/coi-disclosureactions.html
+++ b/kra-coi-bfn-dec2010/coi-disclosureactions.html
@@ -54,14 +54,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="horz-links-bkgrnd" id="horz-links">
   <div id="tabs">
     <dl class="tabul">
-       <dt> <span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure">
-      </span></dt>
-       <dt class="licurrent"> <span class="tabright tabcurrent">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosureactions.html');return document.MM_returnValue" value="Disclosure Actions">
-      </span></dt>
+      <!--<dt class="licurrent"> <span class="tabright tabcurrent">-->
       <dt> <span class="tabright">
-        <input name="Submit" type="submit" onClick="javascript: alert('This would navigate to the as yet unbuilt COI Committee page.'); return false" value="Committee">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure">
       </span></dt>
       <dt> <span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-finanainterests.html');return document.MM_returnValue" value="Financial Interests">
@@ -72,6 +67,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       <dt> <span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-certification.html');return document.MM_returnValue" value="Certification">
       </span></dt>
+      <dt> <span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosureactions.html');return document.MM_returnValue" value="Disclosure Actions">
+      </span></dt>
+      <!--      <dt> <span class="tabright">
+        <input name="Submit" type="submit" onClick="javascript: alert('This would navigate to the as yet unbuilt COI Committee page.'); return false" value="Committee">
+        </span> </dt>-->
     </dl>
   </div>
 </div>
