--- a/kra/index.html
+++ b/kra/index.html
@@ -66,9 +66,14 @@ function MM_goToURL() { //v3.0
                       <p><a href="../kra-cor-dev/correspondence.html" target="_blank">IRB - Correspondence</a></p>
                       <p><a href="../BFN/questionnaire-editor.html" target="_blank">Questionnaire Management</a></p>
                       <p><a href="../kra-awa-dev/aw-awards.html" target="_blank">Awards</a></p>
-                      <p><a href="../kra-coi-bfn/coi-disclosure.html" target="_blank">Conflict of Interest</a><a href="#" target="_blank"></a> (12/2009)</p>
-                      <p><a href="../kra-coi-bfn-dec2010/coi-disclosure.html" target="_blank">Conflict of Interest</a><a href="#" target="_blank"></a> (12/2010)</p>
-                    </div></td>
+                      <p><a href="../kra-coi-bfn/coi-disclosure.html" target="_blank">COI </a>(12/2009)</p>
+                      <p><a href="../kra-coi-bfn-dec2010/coi-disclosure.html" target="_blank">COI - Disclosure </a></p>
+                      <p><a href="../kra-coi-bfn-dec2010/coi-disclosuretypes.html" target="_blank">COI - Internal Disclosure Types</a></p>
+</div>
+  <div align="left">
+    <p>COI - Committee</p>
+  </div>
+  <p>&nbsp;</p></td>
                 </tr>
               </table>
               <p>&nbsp;</p>
