git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6867 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn-dec2010/coi-finanainterests.html
+++ b/kra-coi-bfn-dec2010/coi-finanainterests.html
@@ -235,21 +235,23 @@ $(".na4").slideDown(500)}
             <table cellpadding=0 cellspacing=0 summary="">
               <tr>
                 <td colspan="2" nowrap class="subhead">Active Entities</td>
-                <td width="30%" nowrap class="subhead">Relationship to Entity</td>
-                <td width="30%" nowrap class="subhead">Last Update</td>
-                <td width="10%" nowrap class="subhead"><div align="center">Actions</div></td>
+                <td nowrap class="subhead">Relationship to Entity</td>
+                <td nowrap class="subhead">Last Update</td>
+                <td nowrap class="subhead">Status of Questionnaire</td>
+                <td nowrap class="subhead"><div align="center">Actions</div></td>
               </tr>
               <tr>
-                <td width="50" nowrap class="tab-subhead1"><a href="#" id="A11" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F11"></a></td>
+                <td nowrap class="tab-subhead1"><a href="#" id="A11" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F11"></a></td>
                 <td class="tab-subhead1"><img src="../images/exclamation.png" alt="attention" style="width:16px; height:16px; vertical-align:middle;"> Barakat Pharmaceutical Industries</td>
                 <td class="tab-subhead1">Board of Directors</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
+                <td nowrap class="tab-subhead1">Incomplete</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-deactivate.gif" alt="add" width=64 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-edit1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tbody id="G11" style="display: none;">
                 <tr>
                   <th align=left  style="padding:0px; border:none">&nbsp;</th>
-                  <td colspan="4" align=left  style="padding:0px; border:none">
+                  <td colspan="5" align=left  style="padding:0px; border:none">
                     <table style="width:100%; border:none" cellpadding=0 cellspacing="0"  summary="">
                       <tr>
                         <th width="50" align="right" class="" scope="row"><div align="left"><a href="#" id="A6" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F6" vspace=0></a>
@@ -341,12 +343,13 @@ $(".na4").slideDown(500)}
                 <td class="tab-subhead1">Berlex Laboratories, Inc. </td>
                 <td class="tab-subhead1">Stockholder</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
+                <td nowrap class="tab-subhead1">Complete</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-deactivate.gif" alt="add" width=64 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-edit1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tbody id="G12" style="display: none;">
                 <tr>
                   <th align=left  style="padding:0px; border:none">&nbsp;</th>
-                  <td colspan="4" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
+                  <td colspan="5" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
                       <tbody>
                         <tr>
                           <td colspan="5" align=left ><strong>History of Changes</strong></td>
@@ -395,12 +398,13 @@ $(".na4").slideDown(500)}
                 <td class="tab-subhead1">Bristol-Myers Squibb Company </td>
                 <td class="tab-subhead1">Consultant</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
+                <td nowrap class="tab-subhead1">Complete</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-deactivate.gif" alt="add" width=64 height=15 hspace=3 vspace=3 border=0><img src="../images/tinybutton-edit1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tbody id="G13" style="display: none;">
                 <tr>
                   <td align=left  style="padding:0px; border:none">&nbsp;</td>
-                  <td colspan="4" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
+                  <td colspan="5" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
                       <tbody>
                         <tr>
                           <td colspan="5" align=left ><strong>History of Changes</strong></td>
@@ -444,26 +448,29 @@ $(".na4").slideDown(500)}
                     </table></td>
                 </tr>
               </tbody>
-            </table>
-            <br>
-            <table cellpadding=0 cellspacing=0 summary="">
+
               <tr>
-                <td colspan="2" nowrap class="subhead">Inactive Entities</td>
-                <td width="30%" nowrap class="subhead">Relationship to Entity</td>
-                <td width="30%" nowrap class="subhead">Last Update</td>
-                <td width="10%" nowrap class="subhead"><div align="center">Actions</div></td>
+                <td colspan="6" style="background-color: transparent">&nbsp;</td>
               </tr>
               <tr>
-                <td width="50" nowrap class="tab-subhead1"><a href="#" id="A11w" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F11w"></a></td>
+                <td colspan="2" nowrap class="subhead">Inactive Entities</td>
+                <td nowrap class="subhead">Relationship to Entity</td>
+                <td nowrap class="subhead">Last Update</td>
+                <td nowrap class="subhead"></td>
+                <td nowrap class="subhead"><div align="center">Actions</div></td>
+              </tr>
+              <tr>
+                <td nowrap class="tab-subhead1"><a href="#" id="A11w" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F11w"></a></td>
                 <td class="tab-subhead1">Glaxo Smithkline</td>
                 <td class="tab-subhead1">Board of Directors</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
+                <td nowrap class="tab-subhead1">&nbsp;</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-activate.gif" alt="add" width=53 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tbody id="G11w" style="display: none;">
                 <tr>
                   <td align=left  style="padding:0px; border:none">&nbsp;</td>
-                  <td colspan="4" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
+                  <td colspan="5" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
                       <tbody>
                         <tr>
                           <td colspan="5" align=left ><strong>History of Changes</strong></td>
@@ -512,12 +519,13 @@ $(".na4").slideDown(500)}
                 <td class="tab-subhead1">Dow Pharma</td>
                 <td class="tab-subhead1">Stockholder</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
+                <td nowrap class="tab-subhead1">&nbsp;</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-activate.gif" alt="add" width=53 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tbody id="G12w" style="display: none;">
                 <tr>
                   <td align=left  style="padding:0px; border:none">&nbsp;</td>
-                  <td colspan="4" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
+                  <td colspan="5" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
                       <tbody>
                         <tr>
                           <td colspan="5" align=left ><strong>History of Changes</strong></td>
@@ -566,12 +574,13 @@ $(".na4").slideDown(500)}
                 <td class="tab-subhead1">Eurocaps Soft Gels</td>
                 <td class="tab-subhead1">Consultant</td>
                 <td class="tab-subhead1">07/29/2009 03:59 PM crc</td>
+                <td nowrap class="tab-subhead1">&nbsp;</td>
                 <td nowrap class="tab-subhead1"><div align="center"><a href="#"><img src="../images/tinybutton-activate.gif" alt="add" width=53 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tbody id="G13w" style="display: none;">
                 <tr>
                   <td align=left  style="padding:0px; border:none">&nbsp;</td>
-                  <td colspan="4" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
+                  <td colspan="5" align=left  style="padding:0px; border:none"><table cellpadding=0 cellspacing=0 summary="" style=" width:100%">
                       <tbody>
                         <tr>
                           <td colspan="5" align=left ><strong>History of Changes</strong></td>
