--- a/kra/index.html
+++ b/kra/index.html
@@ -69,10 +69,12 @@ function MM_goToURL() { //v3.0
                       <p><a href="../kra-coi-bfn/coi-disclosure.html" target="_blank">COI </a>(12/2009)</p>
                       <p><a href="../kra-coi-bfn-dec2010/coi-disclosure.html" target="_blank">COI - Disclosure </a></p>
                       <p><a href="../kra-coi-bfn-dec2010/coi-disclosuretypes.html" target="_blank">COI - Internal Disclosure Types</a></p>
+
+    <p><a href="../kra-coi-com-dev/irb-schedule.html" target="_blank">COI - Committee</a></p>
+    <p><a href="../kra-coi-com-dev/irb-meeting.html" target="_blank">COI - Meeting Management</a></p>
+    <p><a href="../kra-coi-irb-dev/irb-corbatch1.html" target="_blank">COI - Correspondence Batch</a></p>
+    <p><a href="../kra-coi-cor-dev/correspondence.html" target="_blank">COI - Correspondence</a></p>
 </div>
-  <div align="left">
-    <p>COI - Committee</p>
-  </div>
   <p>&nbsp;</p></td>
                 </tr>
               </table>
