--- a/menu/kra_devref/centad.html
+++ b/menu/kra_devref/centad.html
@@ -98,33 +98,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </table>
             </div>
           </div>
-        </div>
-        <div class="portlet">
-          <div class="header">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Post-Submission Compliance - Conflict of Interest</h2>
-            </div>
-          </div>
-          <div class="chan-contain">
-            <div class="body">
-              <table border="0" cellpadding="2" cellspacing="0">
-                <tbody>
-                  <tr>
-                    <td class="" nowrap="nowrap">Committee</td>
-                    <td><a class="portal_link" href="#" title="Create Committee"> <img src="../../images/add.png" alt="add" align="absmiddle" border="0" height="16" width="16"> </a> <a class="portal_link" href="#" title="Committee Lookup"> <img src="../../images/searchicon.gif" alt="lookup" align="absmiddle" border="0" height="16" width="16"> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="disabled-text" nowrap="nowrap">Protocol Submissions</td>
-                    <td><img src="../../images/pixel_clear.gif" alt="add" align="absmiddle" border="0" height="16" width="16"> <a class="portal_link" href="#" title="Protocol Submission Lookup"> <img src="../../images/searchicon.gif" alt="lookup" align="absmiddle" border="0" height="16" width="16"> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="disabled-text" nowrap="nowrap">Schedules</td>
-                    <td><img src="../../images/pixel_clear.gif" alt="add" align="absmiddle" border="0" height="16" width="16"> <a class="portal_link" href="#" title="Schedule Lookup"> <img src="../../images/searchicon.gif" alt="lookup" align="absmiddle" border="0" height="16" width="16"> </a></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
         </div></td>
       <td class="content" valign="top"><div class="portlet">
           <div class="header">
@@ -139,10 +112,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tbody>
                   <tr>
                     <td class="disabled-text" nowrap="nowrap">Disclosure</td>
-                    <td><img src="../../images/add1.png" alt="add" align="absmiddle" border="0" height="16" width="16"> <img src="../../images/searchicon1.gif" alt="lookup" align="absmiddle" height="16" width="16"></td>
-                  </tr>
-                  <tr>
-                    <td class="disabled-text" nowrap="nowrap">Financial Entity</td>
                     <td><img src="../../images/add1.png" alt="add" align="absmiddle" border="0" height="16" width="16"> <img src="../../images/searchicon1.gif" alt="lookup" align="absmiddle" height="16" width="16"></td>
                   </tr>
                 </tbody>
@@ -182,7 +151,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </div>
           </div>
           <div class="chan-contain">
-            <div class="body">
+            <div class="body">  <p> <strong>Conflict of Interest</strong> </p>
               <table border="0" cellpadding="2" cellspacing="0">
                 <tbody>
                   <tr>
@@ -199,6 +168,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </tr>
                 </tbody>
               </table>
+              <p> <strong>Protocols</strong></p>
+              <table border="0" cellpadding="2" cellspacing="0">
+                <tbody>
+                  <tr>
+                    <td class="" nowrap="nowrap">Committee</td>
+                    <td><a class="portal_link" href="#" title="Create Committee"> <img src="../../images/add.png" alt="add" align="absmiddle" border="0" height="16" width="16"></a> <a class="portal_link" href="#" title="Committee Lookup"> <img src="../../images/searchicon.gif" alt="lookup" align="absmiddle" border="0" height="16" width="16"></a></td>
+                  </tr>
+                  <tr>
+                    <td class="disabled-text" nowrap="nowrap">Protocol Submissions</td>
+                    <td><img src="../../images/pixel_clear.gif" alt="add" align="absmiddle" border="0" height="16" width="16"> <a class="portal_link" href="#" title="Protocol Submission Lookup"> <img src="../../images/searchicon.gif" alt="lookup" align="absmiddle" border="0" height="16" width="16"></a></td>
+                  </tr>
+                  <tr>
+                    <td class="disabled-text" nowrap="nowrap">Schedules</td>
+                    <td><img src="../../images/pixel_clear.gif" alt="add" align="absmiddle" border="0" height="16" width="16"> <a class="portal_link" href="#" title="Schedule Lookup"> <img src="../../images/searchicon.gif" alt="lookup" align="absmiddle" border="0" height="16" width="16"></a></td>
+                  </tr>
+                </tbody>
+              </table>
+           
             </div>
           </div>
         </div></td>
