--- a/menu/kra_devref/researcher2.html
+++ b/menu/kra_devref/researcher2.html
@@ -134,7 +134,7 @@ function MM_popupMsg(msg) { //v1.0
         <div class="portlet">
           <div class="header">
             <div class="portlet-title">
-              <h2 class="portlet-title">Compliance</h2>
+              <h2 class="portlet-title">Conflict of Interest</h2>
             </div>
           </div>
           <div class="chan-contain">
