--- a/kra-coi-bfn-dec2010/coi-disclosureactions.html
+++ b/kra-coi-bfn-dec2010/coi-disclosureactions.html
@@ -9,7 +9,13 @@
 <script language=javascript src="../scripts/my_bm_inc.js"></script>
 <script language=javascript1.2 src="../scripts/my_explorer.js"></script>
 <script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script>
-<script language=JavaScript src="../scripts/CalendarPopup.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script>
+		!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
+	</script>
+<script type="text/javascript" src="fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox-1.3.4.css" media="screen" />
 <script language=JavaScript type="text/JavaScript">
 <!--
 function MM_goToURL() { //v3.0
@@ -21,7 +27,67 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 }
 //-->
 </script>
-<script type="text/javascript" src="../scripts/jquery.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+$("#yes1").click(
+function(){
+$(".finentities1").slideDown(500)
+$(".na1").slideUp(500)}
+)
+$("#no1").click(
+function(){
+$(".finentities1").slideUp(500)
+$(".na1").slideDown(500)}
+)
+$("#yes2").click(
+function(){
+$(".finentities2").slideDown(500)
+$(".na2").slideUp(500)}
+)
+$("#no2").click(
+function(){
+$(".finentities2").slideUp(500)
+$(".na2").slideDown(500)}
+)
+$("#yes3").click(
+function(){
+$(".finentities3").slideDown(500)
+$(".na3").slideUp(500)}
+)
+$("#no3").click(
+function(){
+$(".finentities3").slideUp(500)
+$(".na3").slideDown(500)}
+)
+$("#yes4").click(
+function(){
+$(".finentities4").slideDown(500)
+$(".na4").slideUp(500)}
+)
+$("#no4").click(
+function(){
+$(".finentities4").slideUp(500)
+$(".na4").slideDown(500)}
+)
+})
+</script>
+<script>
+		!window.jQuery && document.write('<script src="jquery-1.4.3.min.js"><\/script>');
+	</script>
+<script type="text/javascript" src="./fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+<script type="text/javascript" src="./fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" type="text/css" href="./fancybox/jquery.fancybox-1.3.4.css" media="screen" />
+<script type="text/javascript" >
+$(document).ready(function(){
+ $("#autostart").fancybox({
+  'width': 800,
+  'height': 700,
+  'type': 'iframe'
+ });
+
+});
+
+</script>
 </head>
 <body>
 <form name="example"  method="post" action="">
@@ -1054,6 +1120,185 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tbody>
             </table>
           </div>
+          <table cellpadding="0"  cellspacing="0" class="tab" summary="">
+            <tr>
+              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ad Hoc Recipients</td>
+              <td class="tabtable2-mid"><a href="#" id="A4" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F4" vspace=6></a></td>
+              <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
+            </tr>
+          </table>
+          <div class="tab-container" align="center" id="G4" style="display: none;">
+            <div class="h2-container"> <span class="subhead-left">
+              <h2>Ad Hoc Recipients</h2>
+            </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
+              <tr>
+                <td colspan=4 class="tab-subhead">Person Requests:</td>
+              </tr>
+              <tr>
+                <th scope=col>&nbsp;</th>
+                <th scope=col><div align=left>
+                  <label for="action requested2">*Action Requested</label>
+                </div></th>
+                <th scope=col><div align=left>
+                  <label for="person2">*Person</label>
+                </div></th>
+                <th scope=col><div align=center>Actions</div></th>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>Add:</div></th>
+                <td class="infoline"><select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                  <option value=K>ACKNOWLEDGE</option>
+                  <option value=A selected>APPROVE</option>
+                  <option value=F>FYI</option>
+                </select></td>
+                <td class="infoline"><span class="nowrap">
+                  <input name="person" size=30 value="" type=text id="person2">
+                  <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                </span> <span class="fineprint"></span></td>
+                <td class="infoline"><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-add1.gif" alt="add">
+                </div></td>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>1</div></th>
+                <td><span>
+                  <select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                    <option value=K>ACKNOWLEDGE</option>
+                    <option value=A selected>APPROVE</option>
+                    <option value=F>FYI</option>
+                  </select>
+                </span></td>
+                <td><input name="person" size=30 value="thrclark" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span></td>
+                <td><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-delete1.gif" alt="delete">
+                </div></td>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>2</div></th>
+                <td><span>
+                  <select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                    <option value=K>ACKNOWLEDGE</option>
+                    <option value=A selected>APPROVE</option>
+                    <option value=F>FYI</option>
+                  </select>
+                </span></td>
+                <td><input name="person" size=30 value="User ID" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span></td>
+                <td><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-delete1.gif" alt="delete">
+                </div></td>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>3</div></th>
+                <td><span>
+                  <select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                    <option value=K>ACKNOWLEDGE</option>
+                    <option value=A selected>APPROVE</option>
+                    <option value=F>FYI</option>
+                  </select>
+                </span></td>
+                <td><input name="person" size=30 value="rkirkend" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span></td>
+                <td><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-delete1.gif" alt="delete">
+                </div></td>
+              </tr>
+              <tr>
+                <td colspan=4 class="tab-subhead">Workgroup Requests:</td>
+              </tr>
+              <tr>
+                <th scope=col>&nbsp;</th>
+                <th scope=col><div align=left>*Action Requested</div></th>
+                <th scope=col><div align=left>*Workgroup</div></th>
+                <th scope=col><div align=center>Actions</div></th>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>Add:</div></th>
+                <td class="infoline"><select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                  <option value=K>ACKNOWLEDGE</option>
+                  <option value=A selected>APPROVE</option>
+                  <option value=F>FYI</option>
+                </select></td>
+                <td class="infoline"><input name="person" size=30 value="" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span> <span class="fineprint"></span></td>
+                <td class="infoline"><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-add1.gif" alt="add">
+                </div></td>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>1</div></th>
+                <td><span>
+                  <select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                    <option value=K>ACKNOWLEDGE</option>
+                    <option value=A selected>APPROVE</option>
+                    <option value=F>FYI</option>
+                  </select>
+                </span></td>
+                <td><input name="person" size=30 value="thrclark" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span></td>
+                <td><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-delete1.gif" alt="delete">
+                </div></td>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>2</div></th>
+                <td><span>
+                  <select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                    <option value=K>ACKNOWLEDGE</option>
+                    <option value=A selected>APPROVE</option>
+                    <option value=F>FYI</option>
+                  </select>
+                </span></td>
+                <td><input name="person" size=30 value="User ID" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span></td>
+                <td><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-delete1.gif" alt="delete">
+                </div></td>
+              </tr>
+              <tr>
+                <th scope=row><div align=center>3</div></th>
+                <td><span>
+                  <select name="newAdHocRoutePerson.actionRequested2" id="action requested2">
+                    <option value=K>ACKNOWLEDGE</option>
+                    <option value=A selected>APPROVE</option>
+                    <option value=F>FYI</option>
+                  </select>
+                </span></td>
+                <td><input name="person" size=30 value="rkirkend" type=text id="person2">
+                  <span class="nowrap">
+                    <input name="imageField3" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
+                  </span></td>
+                <td><div align=center>
+                  <input name="imageField3" type=image class="tinybutton" src="../images/tinybutton-delete1.gif" alt="delete">
+                </div></td>
+              </tr>
+            </table>
+          </div>
+          <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+            <tr>
+              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Route Log </td>
+              <td class="tabtable2-mid"><a href="#" id="A734" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F734" vspace=6></a></td>
+              <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
+            </tr>
+          </table>
+          <div class="tab-container" align="center" id="G734" style="display: none;">
+            <iframe onload="setRouteLogIframeDimensions();" name="routeLogIFrame" id="routeLogIFrame" src="../misc/routelog.html" hspace="0" vspace="0" title="OneStart Workflow Route Log for document id: 317191" frameborder="0" height="400" width="95%"> </iframe>
+            <!-- After the jsp:doBody of the kul:tab tag -->
+          </div>
           <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
             <tr>
               <td align="left" class="footer"><img src="../images/pixel_clear.gif" alt="" width="12" height="14" class="bl3"></td>
@@ -1063,7 +1308,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </div>
         <div align="right"><br>
           * required </div>
-        <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
+        <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="coi-submitted-pop.html" id="autostart"><img src="../images/buttonsmall_submit.gif" alt="save" width="68" height="18" hspace="5" border="0" id=""></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
       </div></td>
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
   </tr>
